Prototype LTL converter backup
Making big changes to the way events are placed in the strings.  Backing
up current version here.